--- a/RestAssured/test-output/index.html
+++ b/RestAssured/test-output/index.html
@@ -240,7 +240,7 @@ Expected status code &lt;200&gt; but was &lt;400&gt;.
 	at io.restassured.internal.ValidatableResponseImpl.statusCode(ValidatableResponseImpl.groovy:142)
 	at io.restassured.internal.ValidatableResponseImpl.statusCode(ValidatableResponseImpl.groovy)
 	at RestAssuredProject.GmailAPI.createDraftinGmail(GmailAPI.java:286)
-	at RestAssuredProject.GmailAPITest.createDraftinGmail(GmailAPITest.java:109)
+	at RestAssuredProject.GmailAPITest.createDraftinGmail(GmailAPITest.java:169)
 	at java.base/java.util.ArrayList.forEach(ArrayList.java:1540)
 ... Removed 41 stack frames
 </div> <!-- stack-trace -->
@@ -276,7 +276,7 @@ Expected status code &lt;200&gt; but was &lt;400&gt;.
 	at io.restassured.internal.ValidatableResponseImpl.statusCode(ValidatableResponseImpl.groovy:142)
 	at io.restassured.internal.ValidatableResponseImpl.statusCode(ValidatableResponseImpl.groovy)
 	at RestAssuredProject.GmailAPI.sendMessageFromGmail(GmailAPI.java:171)
-	at RestAssuredProject.GmailAPITest.sendEmailfromGmail(GmailAPITest.java:72)
+	at RestAssuredProject.GmailAPITest.sendEmailfromGmail(GmailAPITest.java:104)
 	at java.base/java.util.ArrayList.forEach(ArrayList.java:1540)
 ... Removed 42 stack frames
 </div> <!-- stack-trace -->
@@ -284,56 +284,6 @@ Expected status code &lt;200&gt; but was &lt;400&gt;.
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-RestAssured_GoogleAPISuite-class-failed -->
-          <div class="suite-RestAssured_GoogleAPISuite-class-passed">
-            <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
-              <span class="class-name">RestAssuredProject.CalendarAPITest</span>
-            </div> <!-- main-panel-header rounded-window-top -->
-            <div class="main-panel-content rounded-window-bottom">
-              <div class="method">
-                <div class="method-content">
-                  <a name="createAnEventTest">
-                  </a> <!-- createAnEventTest -->
-                  <span class="method-name">createAnEventTest</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="getCalendarColorsTest">
-                  </a> <!-- getCalendarColorsTest -->
-                  <span class="method-name">getCalendarColorsTest</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="getCalendarEventListTest">
-                  </a> <!-- getCalendarEventListTest -->
-                  <span class="method-name">getCalendarEventListTest</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="getCalendarListTest">
-                  </a> <!-- getCalendarListTest -->
-                  <span class="method-name">getCalendarListTest</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="getCalendarTest">
-                  </a> <!-- getCalendarTest -->
-                  <span class="method-name">getCalendarTest</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="listUserCalendarSettingsTest">
-                  </a> <!-- listUserCalendarSettingsTest -->
-                  <span class="method-name">listUserCalendarSettingsTest</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-            </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-RestAssured_GoogleAPISuite-class-passed -->
           <div class="suite-RestAssured_GoogleAPISuite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
@@ -387,6 +337,56 @@ Expected status code &lt;200&gt; but was &lt;400&gt;.
                   <a name="listUserMessages">
                   </a> <!-- listUserMessages -->
                   <span class="method-name">listUserMessages</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-RestAssured_GoogleAPISuite-class-passed -->
+          <div class="suite-RestAssured_GoogleAPISuite-class-passed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="passed.png"/>
+              <span class="class-name">RestAssuredProject.CalendarAPITest</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="createAnEventTest">
+                  </a> <!-- createAnEventTest -->
+                  <span class="method-name">createAnEventTest</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="getCalendarColorsTest">
+                  </a> <!-- getCalendarColorsTest -->
+                  <span class="method-name">getCalendarColorsTest</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="getCalendarEventListTest">
+                  </a> <!-- getCalendarEventListTest -->
+                  <span class="method-name">getCalendarEventListTest</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="getCalendarListTest">
+                  </a> <!-- getCalendarListTest -->
+                  <span class="method-name">getCalendarListTest</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="getCalendarTest">
+                  </a> <!-- getCalendarTest -->
+                  <span class="method-name">getCalendarTest</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="listUserCalendarSettingsTest">
+                  </a> <!-- listUserCalendarSettingsTest -->
+                  <span class="method-name">listUserCalendarSettingsTest</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -486,71 +486,71 @@ data.addRows(17);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'ViolatingSitesTestRun')
 data.setCell(0, 2, 'RestAssuredProject.AbusiveExperienceAPITest')
-data.setCell(0, 3, 110203);
+data.setCell(0, 3, 137289);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'AbusiveStatusTestRun')
-data.setCell(1, 2, 'RestAssuredProject.AbusiveExperienceAPITest')
-data.setCell(1, 3, 1528);
+data.setCell(1, 1, 'getCalendarColorsTest')
+data.setCell(1, 2, 'RestAssuredProject.CalendarAPITest')
+data.setCell(1, 3, 3340);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'getCalendarEventListTest')
+data.setCell(2, 1, 'listUserCalendarSettingsTest')
 data.setCell(2, 2, 'RestAssuredProject.CalendarAPITest')
-data.setCell(2, 3, 1155);
+data.setCell(2, 3, 2922);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'createAnEventTest')
-data.setCell(3, 2, 'RestAssuredProject.CalendarAPITest')
-data.setCell(3, 3, 1079);
+data.setCell(3, 1, 'AbusiveStatusTestRun')
+data.setCell(3, 2, 'RestAssuredProject.AbusiveExperienceAPITest')
+data.setCell(3, 3, 2158);
 data.setCell(4, 0, 4)
-data.setCell(4, 1, 'deleteDraftMessage')
+data.setCell(4, 1, 'getDraftMessage')
 data.setCell(4, 2, 'RestAssuredProject.GmailAPITest')
-data.setCell(4, 3, 1057);
+data.setCell(4, 3, 1951);
 data.setCell(5, 0, 5)
-data.setCell(5, 1, 'getCalendarListTest')
+data.setCell(5, 1, 'getCalendarTest')
 data.setCell(5, 2, 'RestAssuredProject.CalendarAPITest')
-data.setCell(5, 3, 961);
+data.setCell(5, 3, 1902);
 data.setCell(6, 0, 6)
-data.setCell(6, 1, 'getCalendarTest')
-data.setCell(6, 2, 'RestAssuredProject.CalendarAPITest')
-data.setCell(6, 3, 809);
+data.setCell(6, 1, 'listUserDraftMessage')
+data.setCell(6, 2, 'RestAssuredProject.GmailAPITest')
+data.setCell(6, 3, 1898);
 data.setCell(7, 0, 7)
-data.setCell(7, 1, 'listUserCalendarSettingsTest')
-data.setCell(7, 2, 'RestAssuredProject.CalendarAPITest')
-data.setCell(7, 3, 805);
+data.setCell(7, 1, 'sendEmailfromGmail')
+data.setCell(7, 2, 'RestAssuredProject.GmailAPITest')
+data.setCell(7, 3, 1533);
 data.setCell(8, 0, 8)
-data.setCell(8, 1, 'getDraftMessage')
-data.setCell(8, 2, 'RestAssuredProject.GmailAPITest')
-data.setCell(8, 3, 789);
+data.setCell(8, 1, 'getCalendarEventListTest')
+data.setCell(8, 2, 'RestAssuredProject.CalendarAPITest')
+data.setCell(8, 3, 1506);
 data.setCell(9, 0, 9)
-data.setCell(9, 1, 'getUserMessages')
-data.setCell(9, 2, 'RestAssuredProject.GmailAPITest')
-data.setCell(9, 3, 787);
+data.setCell(9, 1, 'createAnEventTest')
+data.setCell(9, 2, 'RestAssuredProject.CalendarAPITest')
+data.setCell(9, 3, 1432);
 data.setCell(10, 0, 10)
-data.setCell(10, 1, 'getCalendarColorsTest')
-data.setCell(10, 2, 'RestAssuredProject.CalendarAPITest')
-data.setCell(10, 3, 758);
+data.setCell(10, 1, 'deleteMessageFromGmail')
+data.setCell(10, 2, 'RestAssuredProject.GmailAPITest')
+data.setCell(10, 3, 1409);
 data.setCell(11, 0, 11)
-data.setCell(11, 1, 'getCurrentUserProfile')
-data.setCell(11, 2, 'RestAssuredProject.GmailAPITest')
-data.setCell(11, 3, 733);
+data.setCell(11, 1, 'getCalendarListTest')
+data.setCell(11, 2, 'RestAssuredProject.CalendarAPITest')
+data.setCell(11, 3, 1191);
 data.setCell(12, 0, 12)
-data.setCell(12, 1, 'deleteMessageFromGmail')
+data.setCell(12, 1, 'listUserMessages')
 data.setCell(12, 2, 'RestAssuredProject.GmailAPITest')
-data.setCell(12, 3, 727);
+data.setCell(12, 3, 1010);
 data.setCell(13, 0, 13)
-data.setCell(13, 1, 'listUserMessages')
+data.setCell(13, 1, 'getUserMessages')
 data.setCell(13, 2, 'RestAssuredProject.GmailAPITest')
-data.setCell(13, 3, 707);
+data.setCell(13, 3, 969);
 data.setCell(14, 0, 14)
-data.setCell(14, 1, 'listUserDraftMessage')
+data.setCell(14, 1, 'deleteDraftMessage')
 data.setCell(14, 2, 'RestAssuredProject.GmailAPITest')
-data.setCell(14, 3, 660);
+data.setCell(14, 3, 899);
 data.setCell(15, 0, 15)
-data.setCell(15, 1, 'sendEmailfromGmail')
+data.setCell(15, 1, 'getCurrentUserProfile')
 data.setCell(15, 2, 'RestAssuredProject.GmailAPITest')
-data.setCell(15, 3, 302);
+data.setCell(15, 3, 856);
 data.setCell(16, 0, 16)
 data.setCell(16, 1, 'createDraftinGmail')
 data.setCell(16, 2, 'RestAssuredProject.GmailAPITest')
-data.setCell(16, 3, 207);
+data.setCell(16, 3, 315);
 window.suiteTableData['RestAssured_GoogleAPISuite']= { tableData: data, tableDiv: 'times-div-RestAssured_GoogleAPISuite'}
 return data;
 }
@@ -581,93 +581,104 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
+              <div class="chronological-class-name">RestAssuredProject.AbusiveExperienceAPITest</div> <!-- chronological-class-name -->
+              <div class="configuration-suite before">
+                <span class="method-name">reportSetup</span>
+                <span class="method-start">0 ms</span>
+              </div> <!-- configuration-suite before -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
               <div class="chronological-class-name">RestAssuredProject.CalendarAPITest</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
                 <span class="method-name">gettingAuthToken</span>
-                <span class="method-start">0 ms</span>
+                <span class="method-start">357 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">getCalendarListTest</span>
-                <span class="method-start">30203 ms</span>
+                <span class="method-start">43255 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">getCalendarTest</span>
-                <span class="method-start">31184 ms</span>
+                <span class="method-start">44479 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">getCalendarColorsTest</span>
-                <span class="method-start">31997 ms</span>
+                <span class="method-start">46398 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">getCalendarEventListTest</span>
-                <span class="method-start">32760 ms</span>
+                <span class="method-start">49751 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">listUserCalendarSettingsTest</span>
-                <span class="method-start">33924 ms</span>
+                <span class="method-start">51272 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">createAnEventTest</span>
-                <span class="method-start">34744 ms</span>
+                <span class="method-start">54198 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">RestAssuredProject.GmailAPITest</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
                 <span class="method-name">gettingAuthToken</span>
-                <span class="method-start">35957 ms</span>
+                <span class="method-start">55729 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">getCurrentUserProfile</span>
-                <span class="method-start">60959 ms</span>
+                <span class="method-start">91398 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">listUserMessages</span>
-                <span class="method-start">61697 ms</span>
+                <span class="method-start">92258 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">getUserMessages</span>
-                <span class="method-start">62406 ms</span>
+                <span class="method-start">93274 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">deleteMessageFromGmail</span>
-                <span class="method-start">63198 ms</span>
+                <span class="method-start">94245 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <img src="failed.png">
                 </img>
                 <span class="method-name">sendEmailfromGmail</span>
-                <span class="method-start">63931 ms</span>
+                <span class="method-start">95661 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">listUserDraftMessage</span>
-                <span class="method-start">64245 ms</span>
+                <span class="method-start">97206 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">getDraftMessage</span>
-                <span class="method-start">64908 ms</span>
+                <span class="method-start">99108 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">deleteDraftMessage</span>
-                <span class="method-start">65699 ms</span>
+                <span class="method-start">101065 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <img src="failed.png">
                 </img>
                 <span class="method-name">createDraftinGmail</span>
-                <span class="method-start">66758 ms</span>
+                <span class="method-start">101966 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">RestAssuredProject.AbusiveExperienceAPITest</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">AbusiveStatusTestRun(amazon)</span>
-                <span class="method-start">67030 ms</span>
+                <span class="method-start">102413 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">ViolatingSitesTestRun</span>
-                <span class="method-start">68561 ms</span>
+                <span class="method-start">104575 ms</span>
               </div> <!-- test-method -->
+              <div class="configuration-suite after">
+                <span class="method-name">reportTearDown</span>
+                <span class="method-start">241884 ms</span>
+              </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
