--- a/RestAssured/test-output/old/RestAssured-GoogleAPISuite/methods.html
+++ b/RestAssured/test-output/old/RestAssured-GoogleAPISuite/methods.html
@@ -1,42 +1,46 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>RestAssured-GoogleAPISuite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f69090">  <td>19/11/20 20:41:28</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;CalendarAPITest.gettingAuthToken()[pri:0, instance:RestAssuredProject.CalendarAPITest@1ffe63b9]">&gt;&gt;gettingAuthToken</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1105423942</td>   <td></td> </tr>
-<tr bgcolor="f69090">  <td>19/11/20 20:41:58</td>   <td>30194</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CalendarAPITest.getCalendarListTest()[pri:1, instance:RestAssuredProject.CalendarAPITest@1ffe63b9]">getCalendarListTest</td> 
-  <td>main@1105423942</td>   <td></td> </tr>
-<tr bgcolor="f69090">  <td>19/11/20 20:41:59</td>   <td>31175</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CalendarAPITest.getCalendarTest()[pri:2, instance:RestAssuredProject.CalendarAPITest@1ffe63b9]">getCalendarTest</td> 
-  <td>main@1105423942</td>   <td></td> </tr>
-<tr bgcolor="f69090">  <td>19/11/20 20:42:00</td>   <td>31988</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CalendarAPITest.getCalendarColorsTest()[pri:3, instance:RestAssuredProject.CalendarAPITest@1ffe63b9]">getCalendarColorsTest</td> 
-  <td>main@1105423942</td>   <td></td> </tr>
-<tr bgcolor="f69090">  <td>19/11/20 20:42:01</td>   <td>32751</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CalendarAPITest.getCalendarEventListTest()[pri:4, instance:RestAssuredProject.CalendarAPITest@1ffe63b9]">getCalendarEventListTest</td> 
-  <td>main@1105423942</td>   <td></td> </tr>
-<tr bgcolor="f69090">  <td>19/11/20 20:42:02</td>   <td>33915</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CalendarAPITest.listUserCalendarSettingsTest()[pri:5, instance:RestAssuredProject.CalendarAPITest@1ffe63b9]">listUserCalendarSettingsTest</td> 
-  <td>main@1105423942</td>   <td></td> </tr>
-<tr bgcolor="f69090">  <td>19/11/20 20:42:03</td>   <td>34735</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CalendarAPITest.createAnEventTest()[pri:6, instance:RestAssuredProject.CalendarAPITest@1ffe63b9]">createAnEventTest</td> 
-  <td>main@1105423942</td>   <td></td> </tr>
-<tr bgcolor="b58bd3">  <td>19/11/20 20:42:04</td>   <td>35948</td> <td>&nbsp;</td><td title="&gt;&gt;GmailAPITest.gettingAuthToken()[pri:0, instance:RestAssuredProject.GmailAPITest@1c93084c]">&gt;&gt;gettingAuthToken</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1105423942</td>   <td></td> </tr>
-<tr bgcolor="b58bd3">  <td>19/11/20 20:42:29</td>   <td>60950</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GmailAPITest.getCurrentUserProfile()[pri:1, instance:RestAssuredProject.GmailAPITest@1c93084c]">getCurrentUserProfile</td> 
-  <td>main@1105423942</td>   <td></td> </tr>
-<tr bgcolor="b58bd3">  <td>19/11/20 20:42:30</td>   <td>61688</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GmailAPITest.listUserMessages()[pri:2, instance:RestAssuredProject.GmailAPITest@1c93084c]">listUserMessages</td> 
-  <td>main@1105423942</td>   <td></td> </tr>
-<tr bgcolor="b58bd3">  <td>19/11/20 20:42:30</td>   <td>62397</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GmailAPITest.getUserMessages()[pri:3, instance:RestAssuredProject.GmailAPITest@1c93084c]">getUserMessages</td> 
-  <td>main@1105423942</td>   <td></td> </tr>
-<tr bgcolor="b58bd3">  <td>19/11/20 20:42:31</td>   <td>63189</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GmailAPITest.deleteMessageFromGmail()[pri:4, instance:RestAssuredProject.GmailAPITest@1c93084c]">deleteMessageFromGmail</td> 
-  <td>main@1105423942</td>   <td></td> </tr>
-<tr bgcolor="b58bd3">  <td>19/11/20 20:42:32</td>   <td>63922</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GmailAPITest.sendEmailfromGmail()[pri:5, instance:RestAssuredProject.GmailAPITest@1c93084c]">sendEmailfromGmail</td> 
-  <td>main@1105423942</td>   <td></td> </tr>
-<tr bgcolor="b58bd3">  <td>19/11/20 20:42:32</td>   <td>64236</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GmailAPITest.listUserDraftMessage()[pri:6, instance:RestAssuredProject.GmailAPITest@1c93084c]">listUserDraftMessage</td> 
-  <td>main@1105423942</td>   <td></td> </tr>
-<tr bgcolor="b58bd3">  <td>19/11/20 20:42:33</td>   <td>64899</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GmailAPITest.getDraftMessage()[pri:7, instance:RestAssuredProject.GmailAPITest@1c93084c]">getDraftMessage</td> 
-  <td>main@1105423942</td>   <td></td> </tr>
-<tr bgcolor="b58bd3">  <td>19/11/20 20:42:34</td>   <td>65690</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GmailAPITest.deleteDraftMessage()[pri:8, instance:RestAssuredProject.GmailAPITest@1c93084c]">deleteDraftMessage</td> 
-  <td>main@1105423942</td>   <td></td> </tr>
-<tr bgcolor="b58bd3">  <td>19/11/20 20:42:35</td>   <td>66749</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GmailAPITest.createDraftinGmail()[pri:9, instance:RestAssuredProject.GmailAPITest@1c93084c]">createDraftinGmail</td> 
-  <td>main@1105423942</td>   <td></td> </tr>
-<tr bgcolor="b2889a">  <td>19/11/20 20:42:35</td>   <td>67021</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbusiveExperienceAPITest.AbusiveStatusTestRun(java.lang.String)[pri:1, instance:RestAssuredProject.AbusiveExperienceAPITest@4c9f8c13]">AbusiveStatusTestRun</td> 
-  <td>main@1105423942</td>   <td></td> </tr>
-<tr bgcolor="b2889a">  <td>19/11/20 20:42:36</td>   <td>68552</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbusiveExperienceAPITest.ViolatingSitesTestRun()[pri:1, instance:RestAssuredProject.AbusiveExperienceAPITest@4c9f8c13]">ViolatingSitesTestRun</td> 
-  <td>main@1105423942</td>   <td></td> </tr>
+<tr bgcolor="a6bb77">  <td>19/11/21 20:02:13</td>   <td>0</td> <td title="&gt;&gt;BaseClass.reportSetup()[pri:0, instance:RestAssuredProject.AbusiveExperienceAPITest@703580bf]">&gt;&gt;reportSetup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2128029086</td>   <td></td> </tr>
+<tr bgcolor="e6dfe1">  <td>19/11/21 20:02:14</td>   <td>347</td> <td>&nbsp;</td><td title="&gt;&gt;CalendarAPITest.gettingAuthToken()[pri:0, instance:RestAssuredProject.CalendarAPITest@1f0f1111]">&gt;&gt;gettingAuthToken</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2128029086</td>   <td></td> </tr>
+<tr bgcolor="e6dfe1">  <td>19/11/21 20:02:57</td>   <td>43244</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CalendarAPITest.getCalendarListTest()[pri:1, instance:RestAssuredProject.CalendarAPITest@1f0f1111]">getCalendarListTest</td> 
+  <td>main@2128029086</td>   <td></td> </tr>
+<tr bgcolor="e6dfe1">  <td>19/11/21 20:02:58</td>   <td>44451</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CalendarAPITest.getCalendarTest()[pri:2, instance:RestAssuredProject.CalendarAPITest@1f0f1111]">getCalendarTest</td> 
+  <td>main@2128029086</td>   <td></td> </tr>
+<tr bgcolor="e6dfe1">  <td>19/11/21 20:03:00</td>   <td>46387</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CalendarAPITest.getCalendarColorsTest()[pri:3, instance:RestAssuredProject.CalendarAPITest@1f0f1111]">getCalendarColorsTest</td> 
+  <td>main@2128029086</td>   <td></td> </tr>
+<tr bgcolor="e6dfe1">  <td>19/11/21 20:03:03</td>   <td>49740</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CalendarAPITest.getCalendarEventListTest()[pri:4, instance:RestAssuredProject.CalendarAPITest@1f0f1111]">getCalendarEventListTest</td> 
+  <td>main@2128029086</td>   <td></td> </tr>
+<tr bgcolor="e6dfe1">  <td>19/11/21 20:03:05</td>   <td>51261</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CalendarAPITest.listUserCalendarSettingsTest()[pri:5, instance:RestAssuredProject.CalendarAPITest@1f0f1111]">listUserCalendarSettingsTest</td> 
+  <td>main@2128029086</td>   <td></td> </tr>
+<tr bgcolor="e6dfe1">  <td>19/11/21 20:03:08</td>   <td>54187</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CalendarAPITest.createAnEventTest()[pri:6, instance:RestAssuredProject.CalendarAPITest@1f0f1111]">createAnEventTest</td> 
+  <td>main@2128029086</td>   <td></td> </tr>
+<tr bgcolor="b66d96">  <td>19/11/21 20:03:09</td>   <td>55719</td> <td>&nbsp;</td><td title="&gt;&gt;GmailAPITest.gettingAuthToken()[pri:0, instance:RestAssuredProject.GmailAPITest@5ae50ce6]">&gt;&gt;gettingAuthToken</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2128029086</td>   <td></td> </tr>
+<tr bgcolor="b66d96">  <td>19/11/21 20:03:45</td>   <td>91387</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GmailAPITest.getCurrentUserProfile()[pri:1, instance:RestAssuredProject.GmailAPITest@5ae50ce6]">getCurrentUserProfile</td> 
+  <td>main@2128029086</td>   <td></td> </tr>
+<tr bgcolor="b66d96">  <td>19/11/21 20:03:46</td>   <td>92247</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GmailAPITest.listUserMessages()[pri:2, instance:RestAssuredProject.GmailAPITest@5ae50ce6]">listUserMessages</td> 
+  <td>main@2128029086</td>   <td></td> </tr>
+<tr bgcolor="b66d96">  <td>19/11/21 20:03:47</td>   <td>93263</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GmailAPITest.getUserMessages()[pri:3, instance:RestAssuredProject.GmailAPITest@5ae50ce6]">getUserMessages</td> 
+  <td>main@2128029086</td>   <td></td> </tr>
+<tr bgcolor="b66d96">  <td>19/11/21 20:03:48</td>   <td>94234</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GmailAPITest.deleteMessageFromGmail()[pri:4, instance:RestAssuredProject.GmailAPITest@5ae50ce6]">deleteMessageFromGmail</td> 
+  <td>main@2128029086</td>   <td></td> </tr>
+<tr bgcolor="b66d96">  <td>19/11/21 20:03:49</td>   <td>95650</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GmailAPITest.sendEmailfromGmail()[pri:5, instance:RestAssuredProject.GmailAPITest@5ae50ce6]">sendEmailfromGmail</td> 
+  <td>main@2128029086</td>   <td></td> </tr>
+<tr bgcolor="b66d96">  <td>19/11/21 20:03:51</td>   <td>97195</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GmailAPITest.listUserDraftMessage()[pri:6, instance:RestAssuredProject.GmailAPITest@5ae50ce6]">listUserDraftMessage</td> 
+  <td>main@2128029086</td>   <td></td> </tr>
+<tr bgcolor="b66d96">  <td>19/11/21 20:03:52</td>   <td>99097</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GmailAPITest.getDraftMessage()[pri:7, instance:RestAssuredProject.GmailAPITest@5ae50ce6]">getDraftMessage</td> 
+  <td>main@2128029086</td>   <td></td> </tr>
+<tr bgcolor="b66d96">  <td>19/11/21 20:03:54</td>   <td>101054</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GmailAPITest.deleteDraftMessage()[pri:8, instance:RestAssuredProject.GmailAPITest@5ae50ce6]">deleteDraftMessage</td> 
+  <td>main@2128029086</td>   <td></td> </tr>
+<tr bgcolor="b66d96">  <td>19/11/21 20:03:55</td>   <td>101955</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GmailAPITest.createDraftinGmail()[pri:9, instance:RestAssuredProject.GmailAPITest@5ae50ce6]">createDraftinGmail</td> 
+  <td>main@2128029086</td>   <td></td> </tr>
+<tr bgcolor="bd6a61">  <td>19/11/21 20:03:56</td>   <td>102402</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbusiveExperienceAPITest.AbusiveStatusTestRun(java.lang.String)[pri:1, instance:RestAssuredProject.AbusiveExperienceAPITest@703580bf]">AbusiveStatusTestRun</td> 
+  <td>main@2128029086</td>   <td></td> </tr>
+<tr bgcolor="bd6a61">  <td>19/11/21 20:03:58</td>   <td>104564</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbusiveExperienceAPITest.ViolatingSitesTestRun()[pri:1, instance:RestAssuredProject.AbusiveExperienceAPITest@703580bf]">ViolatingSitesTestRun</td> 
+  <td>main@2128029086</td>   <td></td> </tr>
+<tr bgcolor="a6bb77">  <td>19/11/21 20:06:15</td>   <td>241873</td> <td title="&lt;&lt;BaseClass.reportTearDown()[pri:0, instance:RestAssuredProject.AbusiveExperienceAPITest@703580bf]">&lt;&lt;reportTearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2128029086</td>   <td></td> </tr>
 </table>
